# trecia

./: CMakeLists.txt  README.md  kursiokai.txt  main.cpp  pagrindas.h  skaiciavimai.cpp  skaiciavimai.h  studentas.cpp  studentas.h  v.01.cbp  v.01.depend  v.01.layout  v.02.cbp  v.02.depend  v.02.layout  v.03.cbp  v.03.depend  v.03.layout  v1.0vector.cbp
